--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <div>
-  <h1>wise quotes</h1>
+  <h1>Wise quotes</h1>
+  <hr>
   <ul>
       <li *ngFor='let quote of quotes'>
-        {{quote}}
+        {{quote.name}}
       </li>
   </ul>
+  <p *ngIf='quotes.length > 5'>Your quotes are too many</p>
 </div>
