--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,1 @@
-<div>
-  <h1>Wise quotes</h1>
-  <hr>
-  <ul>
-      <li *ngFor='let quote of quotes'>
-        {{quote.name}}
-      </li>
-  </ul>
-  <p *ngIf='quotes.length > 5'>Your quotes are too many</p>
-</div>
+<app-quote></app-quote>
