--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -2,8 +2,9 @@
     <h1>Wise quotes</h1>
     <hr>
     <ul>
-      <li *ngFor='let quote of quotess'>
+      <li *ngFor='let quote of quotes'>
         {{quote.name}}
+        <app-quote-detail [quote]='quote'></app-quote-detail>
       </li>
     </ul>
   </div>
