--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,10 +1,11 @@
-<h1>wise quotes</h1>
-<hr>
+<h1>Wise quotes</h1>
 <ul>
-  <div *ngFor='let quote of quotes;let i = index'>
-    <li>{{quote.name}}</li>
-    <button (click)='toggleDetails(i)'>Toggle Details</button>
-    <app-quote-detail *ngIf='quote.showDescription' [quote]='quote' (isComplete) = 'completeQuote($event,i)'></app-quote-detail>
-  </div>
+    <div *ngFor='let quote of quotes;let i = index'>
+        <li appStrikethrough>{{quote.name}}</li>
+        <button  (click)='toggleDetails(i)'>Toggle Details</button>
+
+    <app-quote-detail *ngIf="quote.showDescription" [quote]='quote' (isComplete)= 'completeQuote($event,i)'></app-quote-detail>
+    
+    </div>
 </ul>
 <p *ngIf='quotes.length > 5'>You have too many quotes</p>
