--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,7 +1,7 @@
 <h1>Wise quotes</h1>
 <ul>
-    <div *ngFor='let quote of quotes;let i = index'>
-        <li appStrikethrough>{{quote.name}} due on {{goal.completeDate|date|uppercase}}</li> 
+    <div *ngFor='let quote of quote;let i = index'>
+        <li appStrikethrough>{{quote.name}}</li>
         <button  (click)='toggleDetails(i)'>Toggle Details</button>
 
     <app-quote-detail *ngIf="quote.showDescription" [quote]='quote' (isComplete)= 'completeQuote($event,i)'></app-quote-detail>
