it will change the structure of the application

--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,10 +1,10 @@
 <h1>Wise quotes</h1>
 <ul>
-    <div *ngFor='let quote of quotes;let i = index'>
-        <li appStrikethrough>{{quote.name}}</li>
+  <div *ngFor='let quote of quotes;let i = index'>
+    <li appStrikethrough>{{quote.name}} due on {{quote.completeDate|date}}</li>
         <button  (click)='toggleDetails(i)'>Toggle Details</button>
 
-    <app-quote-details *ngIf="quote.showDescription" [quote]='quote' (isComplete)= 'completeQuote($event,i)'></app-quote-details>
+    <app-quote-detail *ngIf="quote.showDescription" [quote]='quote' (isComplete)= 'completeQuote($event,i)'></app-quote-detail>
     
     </div>
 </ul>
