it will change the structure of the initial application

--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -4,7 +4,7 @@
     <li appStrikethrough>{{quote.name}} due on {{quote.completeDate|date|uppercase}}</li>
         <button  (click)='toggleDetails(i)'>Toggle Details</button>
 
-    <app-quote-detail *ngIf="quote.showDescription" [quote]='quote' (isComplete)= 'completeQuote($event,i)'></app-quote-detail>
+        <app-quote-detail *ngIf='quote.showDescription' [quote]='quote' (isComplete) = 'deleteQuote($event,i)'></app-quote-detail>
     
     </div>
 </ul>
