--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,11 +1,21 @@
-<h1>Wise quotes</h1>
-<ul>
-  <div *ngFor='let quote of quotes;let i = index'>
-    <li appStrikethrough>{{quote.name}} due on {{quote.completeDate|date|uppercase}}</li>
-        <button  (click)='toggleDetails(i)'>Toggle Details</button>
+<div class="container">
+  <h1>Wise quotes</h1>
+  <hr>
 
-        <app-quote-detail *ngIf='quote.showDescription' [quote]='quote' (isComplete) = 'deleteQuote($event,i)'></app-quote-detail>
-    
+  <div class="row">
+    <div class="col-md-6">
+      <div *ngFor='let quote of quotes;let i = index'>
+        <div>
+          <h4 id={{i}} appStrikethrough>{{quote.name}} due on {{quote.completeDate|date|uppercase}}</h4>
+          <button (click)='toggleDetails(i)' class="btn btn-primary">Toggle Details</button>
+        </div>
+
+        <div *ngIf='quote.showDescription'>
+          <app-quote-detail  [quote]='quote' (isComplete) = 'deleteQuote($event,i)'></app-quote-detail>
+        </div>
+      </div>
     </div>
-</ul>
-<p *ngIf='quotes.length > 5'>You have too many quotes</p>
+  </div>
+
+  <p *ngIf='quotes.length > 5'>You have too many quotes</p>
+</div>
