--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -1,3 +1,7 @@
-<p>{{quote.description}}</p>
-<p>This quote will be complete in {{quote.completeDate|dateCount}} days</p>
-<button (click)= 'quoteDelete(true)' class="btn btn-outline-danger">Delete Quote</button>
+<div>
+
+  <p>{{quote.name}}</p>
+  <p>This quote was posted in {{quote.completeDate|dateCount}} days</p>
+  <button (click)='quoteDelete(true)' class="btn btn-info">Delete Quote</button>
+
+</div>
